增加事件追踪配置

--- a/springboot_demo/src/main/resources/application.properties
+++ b/springboot_demo/src/main/resources/application.properties
@@ -4,3 +4,9 @@ logging.level.root\u00A0=\u00A0info
 
 elasticjob.zookeeper.server-list=192.168.16.170:12181
 elasticjob.zookeeper.namespace=testJob
+
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mydb?serverTimezone=Asia/Shanghai&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
